--- a/style.css
+++ b/style.css
@@ -1,5 +1,45 @@
-<!DOCTYPE css>
-<css>
-<h1>
-  Viskas bus gerai!
-</head>
+head {
+      color: lightblue;
+    }
+
+body {
+        background-color: lightpink;
+      }
+
+h1 {
+        color: darkblue;
+        text-align:center
+        }
+
+h2 {
+        color: darkblue;
+        text-align: center;
+          }
+
+            img {
+            width: 50%;
+            }
+            .center{
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              width: 10%
+            }
+
+            .center{
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              width: 60%
+            }
+
+            .center{
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              width: 62%
+            }
+
+a: hover {
+  background-color: lightblue;
+}
